blocks/header/alt-0-nav.css
/* Override header size on certain pages */
:root {
  --nav-height: 116px;
}

header.header-wrapper {
  position: relative;
}

.block.header {
  position: relative;
  height: var(--nav-height);
  background-color: var(--color-primary-1);
  color: var(--color-white);
  width: 100%;
  z-index: 2;
  top: 0;

  & nav {
    height: var(--nav-height);
    padding: 1rem 1.5rem;
    margin: 0 auto;
    max-width: var(--section-width);

    & .logo {
      width: 50%;

      & a {
        position: relative;
        display: block;

        & img {
          height: 80px;
        }
      }
    }
  }
}

@media (min-width: 600px) {
  :root {
    --nav-height: 143px;
  }

  .block.header {
    & nav {
      max-width: var(--section-width);
      padding: 1rem 1.5rem;
    }
  }
}

@media (min-width: 900px) {
  :root {
    --nav-height: 163px;
  }

  .block.header {
    & nav {
      max-width: var(--section-width);
      padding: 1rem 1.5rem;
    }
  }
}

@media (min-width: 1200px) {
  :root {
    --nav-height: 146px;
  }

  .block.header {
    & nav {
      max-width: var(--section-width);
      padding: 1rem 1.5rem;

      & .logo {
        width: 25%;
      }
    }
  }
}

@media (min-width: 1200px) {
  :root {
    --nav-height: 156px;
  }

  .block.header {
    & nav {
      max-width: var(--section-width);
      padding: 1rem 1.5rem;

      & .logo {
        width: 25%;
      }
    }
  }
}

